--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Hello,World!</h1>
         <p>This is a paragraph.</p>
+        <div>
+            This is a paragraph and this <span>word</span> appears inline. This <a href="http://www.example.com">link</a> will also appear inline.
+        </div>
     </body>
 </html>
